kubernetes/apps/centaur/centaur/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: centaur-console
  annotations:
    gethomepage.dev/enabled: "false"
spec:
  hostnames: ["centaur.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: centaur-console
          port: 3000
